text align fix 3

--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
 	background-color:#FFFFFF;
 	color: #000;
 	font-family: Helvetica, sans-serif;
+	text-align: center;
 
 }
 
